# server

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: container.py  server.py
app/auth/: container.py
app/auth/application/exception/: __init__.py
app/auth/application/service/: auth.py  jwt.py
app/auth/domain/usecase/: auth.py  jwt.py
app/auth/domain/vo/: __init__.py
app/chat/: container.py
app/chat/application/service/: chat.py
app/chat/domain/usecase/: chat.py
app/project/: container.py
app/project/application/dto/: __init__.py
app/project/application/exception/: __init__.py
app/project/application/service/: project.py
app/project/domain/command/: __init__.py
app/project/domain/entity/: experiment.py  project.py
app/project/domain/repository/: project.py
app/user/: container.py
app/workspace/: container.py
core/: config.py
core/db/: session.py
core/db/mixins/: timestamp_mixin.py
core/fastapi/dependencies/: __init__.py  permission.py
core/helpers/: auth.py  email.py  redis.py  token.py  utils.py
core/helpers/cache/: __init__.py  redis_backend.py  socket_manager.py
docker/: docker-compose.yml  init.sql
docker/api/: Dockerfile  nginx.conf  startup.sh
docker/db/: Dockerfile.mysql  init.sql
migrations/: env.py
migrations/versions/: 017396941c7b_update_project_title_and_desc.py  04785df6dd6b_remove_location.py  1de3631d70b8_initialize_workspace.py  26621970b947_survey_dingdong.py  349ae9fdd818_add_phone_num_col.py  3791c4cb9f95_change_nickname_to_username.py  5ca10b8a1ad4_change_order_to_order_no.py  640c73fa2c12_initialize_survey_dindong.py  6f61d7ff6c84_add_profile_color_col_to_user.py  73e1cb9ee15e_delete_project_random_code.py  753a23f41b35_change_phone_num_col_nullable.py  77eaef37f4eb_add_is_deleted_col_to_user.py  7aaeb7869a43_allow_nullable_true_in_project_table.py  e56736b30609_update_column_options.py  e5e5d2ad2393_create_user_oauth_table.py  e6dabd74a864_add_filter_title_to_project.py
tests/: conftest.py
tests/core/exceptions/: test_base.py
tests/core/helpers/: test_token.py
tests/support/: constants.py  project_fixture.py  test_db_coordinator.py  user_fixture.py  workspace_fixture.py
(+63 files in other folders)
