[tool.poetry]
name = "dingdong-survey"
version = "0.0.1"
description = "Survey DingDong"
authors = ["JongPil Yoon <whdvlf94@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
alembic = "^1.13.1"
uvicorn = "^0.25.0"
fastapi = "^0.109.0"
gunicorn = "^21.2.0"
pythondi = "^1.2.4"
ujson = "^5.9.0"
aiomysql = "^0.2.0"
click = "^8.1.7"
redis = "^5.0.1"
pydantic-settings = "^2.1.0"
pyjwt = "^2.8.0"
pytest-asyncio = "^0.23.3"
cryptography = "^41.0.7"
coverage = "^7.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
pymysql = "^1.1.0"
dependency-injector = "^4.41.0"
httpx = "^0.26.0"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.7.0"}
pytest-env = "^1.1.3"
fastapi-mail = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
types-redis = "^4.6.0.20240106"
pytest-asyncio = "^0.23.3"

[tool.coverage.run]
omit=["tests/*", "test_*.py", "migrations/*"]

[tool.isort]
profile="black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
ENV = "test"
